fix: Fix socialbuttons spacing issue

--- a/src/components/socialbuttons/socialbuttons.module.css
+++ b/src/components/socialbuttons/socialbuttons.module.css
@@ -9,7 +9,7 @@
 .social-button {
 	display: flex;
 	flex-direction: column;
-	min-width: 3rem;
+	width: 5rem;
 }
 
 .social-link {
