--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -34,12 +34,15 @@
 	justify-content: center;
 	align-items: center;
 	flex-wrap: wrap-reverse;
-	padding: 2rem;
+	min-width: 25rem;
+	padding: 0 2rem;
 	z-index: 11;
 }
 
 .contact-about {
 	flex: 1 1 50%;
+	min-width: 25rem;
+	padding: 0 1rem;
 	line-height: 1.7;
 	text-align: left;
 }
